Making bottom are flex to fix alignment

--- a/style.css
+++ b/style.css
@@ -85,6 +85,10 @@
 
 #darkContainer > div{
 	position: absolute;
+	
+}
+
+.pointerCursor{
 	cursor: pointer;
 }
 
@@ -118,56 +122,7 @@ a{
 	pointer-events: none
 }
 
-#darkText1{
-	
-	top: 4rem;
-	left: 4rem;
-}
 
-#darkText2{
-	right: 4rem;
-	top: 4rem;
-}
-
-#darkText3{
-	/* display: block; */
-	/* position: relative!important; */
-	text-align: center;
-	left: 40vw;
-	width: 20vw;
-	top: 25vh;
-}
-
-#darkText4{
-	bottom: 4rem;
-	right: 4rem;
-}
-
-#darkText5{
-	bottom: 4rem;
-	left: 4rem;
-}
-
-#darkText6{
-	
-	/* position: absolute!important; */
-	width: 20vw;
-	left: 40vw;
-	bottom: 4rem;
-	text-align: center;
-}
-
-#darkText7{
-	width: 20vw;
-	left: 40vw;
-	top: 4rem;
-	text-align: center;
-}
-
-#darkText8{
-	top: 48vh;
-	right: 4rem;
-}
 
 
 /* .topContainer::after
@@ -207,6 +162,10 @@ a{
 	height: 100vh;
 	position: absolute;
 	top: 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 
 .arrowContainer {
@@ -222,3 +181,83 @@ a{
 	visibility:hidden;
 	display:none;
 } */
+
+#darkContainer div{
+	/* z-index: 9; */
+}
+
+#darkText1{
+	
+	top: 4rem;
+	left: 4rem;
+	cursor: pointer;
+	z-index: 9!important;
+}
+
+#darkText2{
+	right: 4rem;
+	top: 4rem;
+	cursor: pointer;
+	z-index: 9!important;
+}
+
+#darkText3Container{
+	/* display: block; */
+	/* position: relative!important; */
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+	width: 100vw;
+	text-align: center;
+	z-index: 8!important;
+}
+
+
+#darkText3 p {
+	max-width: 20rem;
+	cursor: pointer;
+	z-index: 9!important;
+}
+
+#darkText4{
+	bottom: 4rem;
+	right: 4rem;
+	cursor: pointer;
+	z-index: 9!important;
+}
+
+#darkText5{
+	bottom: 4rem;
+	left: 4rem;
+	cursor: pointer;
+	z-index: 9!important;
+}
+
+#darkText6{
+	
+	/* position: absolute!important; */
+	width: 20vw;
+	left: 40vw;
+	bottom: 4rem;
+	text-align: center;
+	cursor: pointer;
+	z-index: 9!important;
+}
+
+#darkText7{
+	width: 20vw;
+	left: 40vw;
+	top: 4rem;
+	text-align: center;
+	cursor: pointer;
+	z-index: 9!important;
+}
+
+#darkText8{
+	top: 48vh;
+	right: 4rem;
+	cursor: pointer;
+	z-index: 9!important;
+}
